--- a/css/styles.css
+++ b/css/styles.css
@@ -559,6 +559,7 @@ list-style: none;
     background-color: #2196F3;
 }
 
+
 /* PORTFOLIO */
 /* button */
 
@@ -679,7 +680,7 @@ color: var(--main-link-cl);
     transition: visibility 500ms, opacity 500ms;
 }
 .modal {
-    padding: 20px;
+    padding: 20px 35px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -710,15 +711,104 @@ color: var(--main-link-cl);
     height: 30px;
     cursor: pointer;
 }
-label{
+.register-form-title{
     display: block;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 12px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    }
+.register-form-field{
+    position: relative;
+    display: block;
+    margin-bottom: 8px;
 }
-textarea{
+.register-form-label{
+    display: block;
+    font-size: 14px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: #757575;
+    margin-bottom: 4px;
+}
+.register-form-input{
+    width: 100%;
+    height: 45px;
+    border-radius: 10px;
+    padding-left: 42px;
+    padding-right: 42px;
+    outline: transparent;
+    border: solid 1px hsl(0, 0%, 20%);
+    transition: 400ms;
+}
+.register-form-input:focus{
+    border-color: #2196F3;
+}
+.register-form-input:focus + .register-form-icon{
+    fill: #2196f3;
+}
+.register-form-icon{
+    position: absolute;
+    top:0;
+    left: 10px;
+    margin-top: 29px;
+    transition: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #212121;
+
+    
+}
+.register-form-group{
+    gap: 10px;
+    margin-bottom: 20px;
+}
+.register-form-agreement{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.register-form-message{
     resize: none;
+    outline: transparent;
+    border: solid 1px hsl(0, 0%, 20%);
+    border-radius: 5px;
+    width: 458px;
+    height: 120px;
+    padding: 16px 12px;
+    color: hsl(0, 0%, 50%);
+
 }
-.contract-check{
-    color: #188CE8;
+.register-form-message:focus{
+    border-color: #2196F3;
 }
+.register-form-btn{
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 50px;
+    margin-top: 30px;
+    border-radius: 4px;
+    background-color: #188CE8;
+    color: #FFFFFF;
+    border: none;
+
+}
+.register-form-btn:active{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+
 /* OVERLAY */
 .card-overlay{
     position: relative;
