--- a/css/styles.css
+++ b/css/styles.css
@@ -559,6 +559,78 @@ list-style: none;
     background-color: #2196F3;
 }
 
+.send-mail-footer {
+display: block;
+margin-left: auto;
+}
+
+.title-footer {
+margin-bottom: 20px;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--secondary-txt-cl);
+}
+
+.input-footer {
+padding-left: 16px;
+width: 358px;
+height: 50px;
+background-color: transparent;
+color: var(--light-bgk);
+border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+transition-property: border-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.btn-footer {
+display: flex;
+gap: 10px;
+justify-content: center;
+align-items: center;
+text-align: center;
+min-width: 200px;
+height: 50px;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.87;
+letter-spacing: 0.06em;
+background-color: var(--bg-link-cl);
+color: var(--secondary-txt-cl);
+border: none;
+border-radius: 4px;
+cursor: pointer;
+transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-footer:hover,
+.btn-footer:focus {
+background-color: var(--accent-link-bg-cl);
+}
+
+.footer-send-block {
+display: flex;
+gap: 12px;
+margin-top: 20px;
+}
+
+.send-footer {
+fill: currentColor;
+}
+
+.input-footer:focus,
+.input-footer:hover {
+border-color: var(--bg-link-cl);
+}
+
 
 /* PORTFOLIO */
 /* button */
@@ -711,6 +783,13 @@ color: var(--main-link-cl);
     height: 30px;
     cursor: pointer;
 }
+.modal-btn:hover,
+.modal-btn:focus,
+.modal-close-btn:hover,
+.modal-close-btn:focus
+{
+    fill: #2196F3;
+}
 .register-form-title{
     display: block;
     text-align: center;
@@ -752,9 +831,11 @@ color: var(--main-link-cl);
     border: solid 1px hsl(0, 0%, 20%);
     transition: 400ms;
 }
+.register-form-input:hover,
 .register-form-input:focus{
     border-color: #2196F3;
 }
+.register-form-input:hover
 .register-form-input:focus + .register-form-icon{
     fill: #2196f3;
 }
@@ -777,6 +858,7 @@ color: var(--main-link-cl);
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5px;
 }
 .register-form-message{
     resize: none;
@@ -789,8 +871,26 @@ color: var(--main-link-cl);
     color: hsl(0, 0%, 50%);
 
 }
+.register-form-message:hover,
 .register-form-message:focus{
     border-color: #2196F3;
+}
+.register-form-checkbox{
+    width: 16px;
+    height: 15px;
+    
+}
+.register-form-desc{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+.registered-form-link{
+    color: #2196F3;
 }
 .register-form-btn{
     display: block;
@@ -799,16 +899,16 @@ color: var(--main-link-cl);
     height: 50px;
     margin-top: 30px;
     border-radius: 4px;
-    background-color: #188CE8;
+    background-color: #2196f3;
     color: #FFFFFF;
     border: none;
-
-}
-.register-form-btn:active{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
 }
-
-
+.register-form-btn:hover,
+.register-form-btn:focus{
+    background-color: #188CE8;
+}
 /* OVERLAY */
 .card-overlay{
     position: relative;
