--- a/css/styles.css
+++ b/css/styles.css
@@ -830,7 +830,7 @@ color: var(--main-link-cl);
     padding-left: 42px;
     padding-right: 42px;
     outline: transparent;
-    border: solid 1px hsl(0, 0%, 20%);
+    border: 1px solid rgba(33, 33, 33, 0.2);
     transition: 400ms;
 }
 .register-form-input:hover,
@@ -870,7 +870,8 @@ color: var(--main-link-cl);
     width: 458px;
     height: 120px;
     padding: 16px 12px;
-    color: hsl(0, 0%, 50%);
+    outline: transparent;
+    border: 1px solid rgba(33, 33, 33, 0.2);
     transition: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -903,6 +904,11 @@ color: var(--main-link-cl);
     color: #FFFFFF;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    cursor: pointer;
 
 }
 .register-form-btn:hover,
